# llm-benchmark

./: LICENSE  README.md  pyrightconfig.json
backend/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/app/: env.py  log_config.py
backend/app/api/: main.py
backend/app/api/routes/: leaderboard.py  metrics.py  raw_data.py
backend/app/benchmark/: metrics.py  run_service.py  runner.py  scheduler.py  schemas.py  state.py  ttft_scores.py
backend/app/database/: __init__.py  db.py  models.py  repository.py
backend/app/prompts/: loader.py  prompts.json
backend/app/providers/llm/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  helpers.py  openai.py
frontend/: app.py  pyproject.toml
